force-app/main/default/objects/Game_Move_Event__e/Game_Move_Event__e.object-meta.xml
<CustomObject>
    <label>Game Move Event</label>
    <pluralLabel>Game Move Events</pluralLabel>
</CustomObject>