force-app/main/default/objects/Game_Move_Event__e/fields/Cell_Position__c.field-meta.xml
<CustomField>
    <fullName>Cell_Position__c</fullName>
    <label>Cell Position</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>