force-app/main/default/objects/Game_Move_Event__e/fields/Game_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Game_Session_Id__c</fullName>
    <label>Game Session Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>