force-app/main/default/objects/Game_Move_Event__e/fields/Player_Id__c.field-meta.xml
<CustomField>
    <fullName>Player_Id__c</fullName>
    <label>Player Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>